Updated Maven POM file (first time I've ever used Maven so this probably looks terrible to an old-hand), including newer artifact versions. In the Java code, some deprecated methods were updated i.e new Double swapped out with Double.parseDouble. Running on JDK19